style.css
.container {
    width: 100vw; height: 100vh;
    background-color: aliceblue;
    padding: 20px;
}
.sidebar { background-color: brown; }
.header { background-color: greenyellow; }
.content { background-color: aqua; }

.container {
    display: grid;
    grid-template-rows: 1fr 4fr;
    grid-template-columns: 1fr 3fr;
    gap: 20px;
}
.sidebar {
    grid-row: 1 / span 2;
    grid-column: 1;
}
.header {
    grid-row: 1;
    grid-column: 2;
}
.content {
    grid-row: 2;
    grid-column: 2;
}

/*SIDEBAR*/
/*remove list gap and bullet properties*/
.sidebar li { list-style-type: none; }
.sidebar ul { margin: 0; padding: 0; }

.sidebar {
    display: grid;
    grid-template-rows: 1fr 3fr 2fr 3fr;
}
.sidebar > * {
    padding: 20px;
    place-self: center start;
}
.sidebar ul {
    display: grid;
    gap: 20px;
}

/*HEADER*/
.upper, .bottom { width: 100%; }
.upper { height: 35%; }

.upper .searchbar {
    background-color: gray;
    border-style: solid;
    border-color: black;
    border-radius: 15px;

    width: 20rem;
    height: 2rem;
    margin: 5%;
    margin-left: 0;
}

.upper img.search,
.upper img.bell { margin: 1.5%; }

.upper, .bottom {
    display: flex;
    align-items: center;
}
.upper .left { flex-grow: 2; }
.upper .right { flex-grow: 1; }

.bottom .left,
.bottom .right { flex-grow: 1; }

.upper .left,
.upper .right, 
.bottom .left, 
.bottom .right {
    display: flex;
    align-items: center;
}
.upper .right {
    justify-content: flex-end;
}
.upper .right .profile,
.bottom .left .profile {
    height: 50px; width: 50px;
    margin: 1.5rem; 

    background-color: black;
    border-style: solid;
    border-radius: 50%;
}

.bottom .left .profile { height: 75px; width: 75px; }

.bottom .right { justify-content: space-between; }

.bottom .right div {
    background-color: lightblue;
    padding: 2.5rem;
    padding-top: 1rem; padding-bottom: 1rem;

    border-radius: 2rem;
}

/*CONTENT MAIN*/

